OpenAPI description actualizada y URIs cambiadas a plural, cambiado un status de respuesta en errores
