# application/src/main/java/org/cris6h16/facades/CreateAddressDTO.java
@@ -8,6 +8,7 @@ import lombok.Setter;
 public class CreateAddressDTO {
     private String street;
     private String city;
-    private String state;
+    private String state;// todo: renombrar todo a estado(en lugar de provincia)
     private String mobileNumber;
+    private String reference;
 }
